@@ -13,7 +13,16 @@ Next
 - Implemented JSON serialization for objects
 - Refactored many internal objects to improve performance
 - Added python 3.x support (experimental)
-
+- New (and, as such, experimental) unicode handling in MSSQL
+  Use mssql4n:// or mssqn3n:// uris. NB: These adapters will probably 
+  become the de-facto standard for MSSQL handling. 
+  Any other adapter will continue to be supported just for legacy
+  databases
+- Restricted table and field names to a "dotted-notation-friendly" syntax,
+  meaning basically anything:
+   - alphanumeric
+   - not starting with underscore or an integer
+  you need to use the "rname" attribute for anything funnier than that
 
 Version 15.03
 -------------
